--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <body>
 
 <hl>My ECS Github Page</hl>
-<p>I love ECS! And I love food!</p>
+<p>I love ECS, and i like food.</p>
+ <a href="www.google.com"> google </a">
 
 </body>
 </html>
