--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <hl>My ECS Github Page</hl>
 <p>I love ECS, and i like food.</p>
  <a href= "http://www.google.com/" > google </a>
-
+ <!-- haha im bored -->
 </body>
 </html>
