--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <hl>My ECS Github Page</hl>
 <p>I love ECS, and i like food.</p>
- <a href= "http://www.google.com/" > google </a>
+ <a href= "http://w3schools.com/" > w3 schools </a>
  <!-- haha im bored -->
 </body>
 </html>
