--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <title>My ECS Github Page</title>
 <body>
-
+<body style="background-color:powderblue;">
 <hl>My ECS Github Page</hl>
 <p>I love ECS, and i like food.</p>
  <a href= "http://w3schools.com/" > w3 schools </a>
@@ -10,5 +10,4 @@
 </body>
 </html>
 
-<body style="background-color.powderblue;">
- 
+
