--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,1 +1,7 @@
+<hl style="color:Tomato;">Hello World</hl>
+<p style="color:DodgerBlue;">Hello World</p>
+
+<h1 style="border:2px solid DodgerBlue;">Hello World</h1>
+<h2 style="border:2px solid Tomato;">Hello World</h2>
+<p style="border:2px solid Violet;">Hello World</p>
 
