--- a/exercises/index.html
+++ b/exercises/index.html
@@ -5,7 +5,7 @@
 <h2 style="border:2px solid Tomato;">Hello World</h2>
 <p style="border:2px solid Violet;">Hello World</p>
 
-<a hraf="links:html">link Exercises</a>
+<a hraf="links:html">link:Exercises</a>
 
 <a hraf="index.html">
   <img arc="/images/home:png" alt="Exercises Home"
