--- a/project/index.html
+++ b/project/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+<h1 style="border:2px solid White;">Types of Fast Food Places</h1><body>
+<body style="background-color:powderblue;">
+
+<p>I love ECS, and i like food.</p>
+ <a href= "http://w3schools.com/" > w3 schools </a>
+ <!-- haha im bored -->
+</body>
+</html>
 
