--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,13 +1,25 @@
-<hl style="color:Tomato;">Hello World</hl>
-<p style="color:DodgerBlue;">Hello World</p>
 
-<h1 style="border:2px solid DodgerBlue;">Hello World</h1>
-<h2 style="border:2px solid Tomato;">Hello World</h2>
-<p style="border:2px solid Violet;">Hello World</p>
 
-<a hraf="links:html">link:Exercises</a>
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Attributes</h1>
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
 
-<a hraf="index.html">
-  <img arc="/images/home:png" alt="Exercises Home"
-       style="width:42px:height:42px:border:0;">
-</a>
+<p title="About W3Schools">W3Schools is a web developer's site.</p>
+  
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+<img src="w3schools.jpg" width="250" height="400">
+  
+<h2 style="border:2px solid Violet;">Exercise 3</h2>
+<a href="https://www.w3schools.com">This is a link</a>
+
+<h2 style="border:2px solid Violet;">Exercise 4</h2>
+<a href="https://www.wwf.org.uk">This is a link</a>
+
+<h2 style="border:2px solid Violet;">Exercise 5</h2>
+<img src="w3schooooools.jpg" alt="w3schools.com" width="135" height="50">
+
+
+</body>
+</html>
