--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>My ECS Github Page</title>
+<h1 style="border:2px solid DodgerBlue;">My ECS Github Page</h1>
 <body>
-<body style="background-color:powderblue;">
-<hl>My ECS Github Page</hl>
-<p>I love ECS, and i like food.</p>
- <a href= "http://w3schools.com/" > w3 schools </a>
- <!-- haha im bored -->
+<body style="background-color:White;">
+<h2 style="border:2px solid Violet;">Exercises </h2>
+ <a href= "http://www.anikamalladi.github.io/exercises/attributes" > Exercises </a>
+ 
 </body>
 </html>
 
