--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body>
 <body style="background-color:White;">
 <h2 style="border:2px solid Violet;">Exercises </h2>
- <a href= "http://www.anikamalladi.github.io/exercises/attributes.html" > Exercises </a>
+ <a href= "https://anikamalladi.github.io/exercises/attributes.html"> Exercises </a>
  
 </body>
 </html>
