--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -20,7 +20,7 @@
 
  <br> 
  <br>
- <a href= "http://www.anikamalladi.github.io/exercises/headings" > Headings </a>
+ <a href= "https://anikamalladi.github.io/exercises/headings.html" > Headings </a>
 
 
 </body>
