--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Headings</h1>
 
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
+<h1>London</h1>
+<p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+  
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+<h1>London</h1>
+<hr>
+<p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+
+<h2 style="border:2px solid Violet;">Exercise 3</h2>
+<h1>Hello</h1>
+<h2>Hello</h2>
+<h3>Hello</h3>
+<h4>Hello</h4>
+<h5>Hello</h5>
+<h6>Hello</h6>
+  
+<h2 style="border:2px solid Violet;">Exercise 4</h2>
+<h1>Universal Studios Presents</h1>
+
+<h2>Jurassic Park</h2>
+
+<h3>About</h3>
+
+<p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p>
+!!
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/exercises/attributes.html"> Back to Attributes </a>
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/exercises/paragraphs.html"> Pragraphs </a>
