--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -34,7 +34,7 @@
 <a href= "https://anikamalladi.github.io/exercises/attributes.html"> Back to Attributes </a>
 <br>
 <br>
-<a href= "https://anikamalladi.github.io/exercises/paragraphs.html"> Pragraphs </a>
+<a href= "https://anikamalladi.github.io/exercises/paragraphs.html"> Paragraphs </a>
 
 </body>
 </html>
