--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -1,1 +1,10 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Headings</h1>
 
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
+  
+  
+</body>
+</html>
