--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 style="border:2px solid DodgerBlue;">Headings</h1>
+<h1 style="border:2px solid DodgerBlue;">Paragraphs</h1>
 
 <h2 style="border:2px solid Violet;">Exercise 1</h2>
   
