--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -4,7 +4,45 @@
 <h1 style="border:2px solid DodgerBlue;">Paragraphs</h1>
 
 <h2 style="border:2px solid Violet;">Exercise 1</h2>
+<p>Hello World!</p>  
   
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+<p>This is a paragraph.</p>
+<p>This is a paragraph.</p>
+ 
+<h2 style="border:2px solid Violet;">Exercise 3</h2>
+<p>
+My Bonnie lies over the ocean.<br>
+My Bonnie lies over the sea.<br>
+My Bonnie lies over the ocean.<br>
+Oh, bring back my Bonnie to me.
+</p>
+  
+<h2 style="border:2px solid Violet;">Exercise 4</h2>
+<pre>
+
+   My Bonnie lies over the ocean.
+
+   My Bonnie lies over the sea.
+
+   My Bonnie lies over the ocean.
+
+   Oh, bring back my Bonnie to me.
+
+</pre>
+
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/exercises/headings.html"> Back to Headings </a>
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/exercises/styles.html"> Styles </a>
+
+</body>
+</html>
+
   
 </body>
 </html>
