--- a/exercises/styles.html
+++ b/exercises/styles.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Styles</h1>
 
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
+<p style="color:blue">This is a paragraph.</p>
+
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+<p style="font-family:courier">This is a paragraph.</p>
+
+<h2 style="border:2px solid Violet;">Exercise 3</h2>
+<p style="text-align:center">This is a paragraph.</p>
+  
+<h2 style="border:2px solid Violet;">Exercise 4</h2>
+<p style="font-size:50px">This is a paragraph.</p>
+
+
+</body>
+</html>
