--- a/exercises/styles.html
+++ b/exercises/styles.html
@@ -15,6 +15,26 @@
 <h2 style="border:2px solid Violet;">Exercise 4</h2>
 <p style="font-size:50px">This is a paragraph.</p>
 
+<body style="background-color:yellow">
+
+<h2 style="border:2px solid Violet;">Exercise 5</h2>
+<h1>This is a heading</h1>
+<p>This is a paragraph.</p>
+
+<body style="text-align:center">
+<h2 style="border:2px solid Violet;">Exercise 6</h2>
+<h1>This is a heading</h1>
+<h2>This is also a heading</h2>
+<p>This is a paragraph.</p>
+<p>This is also paragraph.</p>
+  
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/exercises/paragraphs.html"> Back to Paragraphs </a>
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/exercises/formatting.html"> Formatting </a>
+
 
 </body>
 </html>
