--- a/exercises/formatting.html
+++ b/exercises/formatting.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Formatting</h1>
+
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
+<h1>What Does WWF Do?</h1>
+
+<p>WWF's mission is to stop the <strong>degradation</strong> of our planet's natural environment.</p>
+  
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+<h1>Tokyo</h1>
+
+<p>Tokyo is the capital of Japan, the center of the Greater Tokyo Area, and the most populous <em>metropolitan</em> area in the world.</p>
+
+<h2 style="border:2px solid Violet;">Exercise 3</h2>
+<p>HTML is <mark>FUN</mark> to learn!</p>
+  
+<h2 style="border:2px solid Violet;">Exercise 4</h2>
+<p>H<sub>2</sub>O is the scientific term for water.</p>
+  
+<h2 style="border:2px solid Violet;">Exercise 5</h2>
+<p>My favorite color is <del>blue</del> red.</p>
+ 
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/exercises/styles.html"> Back to Styles </a>
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/exercises/quotations.html"> Quotations </a>
+
+</body>
+</html>
+
 
