--- a/exercises/quotations.html
+++ b/exercises/quotations.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Quotations</h1>
 
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
+<p>I am so <q>cool</q>.</p>
+
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+
+<blockquote cite="http://www.worldwildlife.org/who/index.html">
+For 50 years, WWF has been protecting the future of nature.
+The world's leading conservation organization,
+WWF works in 100 countries and is supported by
+1.2 million members in the United States and
+close to 5 million globally.
+</blockquote>
+  
+<h2 style="border:2px solid Violet;">Exercise 3</h2>
+<bdo dir="rtl">What a beautiful day!</bdo>
+
+<h2 style="border:2px solid Violet;">Exercise 4</h2>
+<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
+  
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/exercises/formatting.html"> Back to Formatting </a>
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/exercises/comments.html"> Comments </a>
+
+</body>
+</html>
