--- a/exercises/comments.html
+++ b/exercises/comments.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Comments</h1>
 
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
+<p>This is a paragraph.</p>
+  
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+<p>This is a paragraph.</p>
+<!-- Do not display this text in the browser -->
+<p>This is another paragraph</p>
+  
+<br>
+<br>
+<a href= "anikamalladi.github.io/exercises/quotations.html"> Back to Quotations </a>
+<br>
+<br>
+<a href= "anikamalladi.github.io/exercises/colors.html"> Colors </a>
+
+</body>
+</html>
