--- a/project/main.html
+++ b/project/main.html
@@ -1,1 +1,5 @@
-
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Types of Fast Food Places</h1>
+<h3 style="border:2px solid Violet;">By Anika Malladi</h2>
