--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
 <body style="background-color:White;">
 <h2 style="border:2px solid Violet;">Exercises </h2>
  <a href= "https://anikamalladi.github.io/exercises/attributes.html"> Exercises </a>
+<h2 style="border:2px solid Violet;">Website Project</h2>
+ <a href= "httpps://anikamalladi.github.io/project/main.html"> Types of Fast Food  </a>
  
 </body>
 </html>
 
 
+ 
