--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html>
+<h1 style="border:2px solid DodgerBlue;">Exercises</h1>
+<body>
+<body style="background-color:White;">
+<h2 style="border:2px solid Violet;">Attributes </h2>
+ <a href= "https://anikamalladi.github.io/exercises/attributes.html"> Link to Attributes </a>
+<h2 style="border:2px solid Violet;">Headings</h2>
+ <a href= "https://anikamalladi.github.io/exercises/headings.html"> Link to Headings </a>
+<h2 style="border:2px solid Violet;">Paragraphs</h2>
+ <a href= "https://anikamalladi.github.io/exercises/paragraphs.html"> Link to Paragraphs </a>
+<h2 style="border:2px solid Violet;">Styles</h2>
+ <a href= "https://anikamalladi.github.io/exercises/styles.html"> Link to Styles </a>
+<h2 style="border:2px solid Violet;">Formatting</h2>
+ <a href= "https://anikamalladi.github.io/exercises/formatting.html"> Link to Formatting </a>
+<h2 style="border:2px solid Violet;">Quotations</h2>
+ <a href= "https://anikamalladi.github.io/exercises/quotations.html"> Link to Quotations </a>
+<h2 style="border:2px solid Violet;">Comments</h2>
+ <a href= "https://anikamalladi.github.io/exercises/comments.html"> Link to Comments </a>
+ 
+</body>
+</html>
