--- a/exercises/links.html
+++ b/exercises/links.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Links</h1>
+
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
+<a href="https://www.w3schools.com">Visit our HTML tutorial.</a>
+  
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+<a href="html_images.asp">HTML Images</a>
+  
+<h2 style="border:2px solid Violet;">Exercise 3</h2>
+<a href="html_images.asp" target="_blank">HTML Images</a>
+  
+<h2 style="border:2px solid Violet;">Exercise 4</h2>
+<a href="html_images.asp" target="_blank" style="text-decoration:none">HTML Images</a>
+
+<h2 style="border:2px solid Violet;">Exercise 5</h2>
+<a href="https://www.w3schools.com">
+<img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
+</a>
+  
+<br> 
+ <br>
+ <a href= "https://anikamalladi.github.io/exercises/images.html"> Images </a>
+
+</body>
+</html>
+
+
+
+
 
