--- a/exercises/images.html
+++ b/exercises/images.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Images</h1>
+
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
+<img src="programming.gif" alt="Computer Man"
+width="96" height="96">
+
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+<img src="html5.gif" alt="HTML5 Icon"
+style="width:256px;height:256px">
+  
+
+<h2 style="border:2px solid Violet;">Exercise 3</h2>
+<a href="https://www.w3schools.com">
+<img src="smiley.gif" alt="HTML tutorial"
+style="width:42px;height:42px">
+</a>
+  
+<h2 style="border:2px solid Violet;">Exercise 4</h2>
+<p>
+<img src="smiley.gif" alt="Smiley face"
+style="float:left;width:42px;height:42px">
+A paragraph with an image. A paragraph with an image.
+A paragraph with an image. A paragraph with an image.
+A paragraph with an image. A paragraph with an image.    
+</p>
+
+<h2 style="border:2px solid Violet;">Exercise 5</h2>
+<img src="pic_mountain.jpg" style="width:304px;height:228px;">
+  
+<h2 style="border:2px solid Violet;">Exercise 6</h2>
+<img src="w3schooooools.jpg" alt="W3Schools.com" width="135" height="50">
+
+<br> 
+<br>
+ <a href= "https://anikamalladi.github.io/exercises/links.html"> Back to Links </a>
+<br> 
+<br>
+ <a href= "https://anikamalladi.github.io/exercises/tables.html"> Tables </a>
+
+
+</body>
+</html>
+
+
+
+
+
 
