--- a/exercises/lists.html
+++ b/exercises/lists.html
@@ -1,1 +1,81 @@
-l
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Lists</h1>
+ 
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
+<ul>
+  <li>Coffee</li>
+</ul>
+  
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+<ol>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+  
+<h2 style="border:2px solid Violet;">Exercise 3</h2>
+<ul style="list-style-type:square">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+  
+<h2 style="border:2px solid Violet;">Exercise 4</h2>
+<ol type="A">
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+  
+<h2 style="border:2px solid Violet;">Exercise 5</h2>
+<dl>
+  <dt>Coffee</dt>
+  <dd>- black hot drink</dd>
+  <dt>Milk</dt>
+  <dd>- white cold drink</dd>
+</dl>
+  
+<head>
+<h2 style="border:2px solid Violet;">Exercise 6</h2>
+<style>
+ul#menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+ul#menu li {
+    float:left;
+}
+</style>
+</head>
+<body>
+
+<ul id="menu">
+  <li>Apples</li>
+  <li>Bananas</li>
+  <li>Lemons</li>
+  <li>Oranges</li>
+</ul>  
+  
+<br> 
+<br>
+ <a href= "https://anikamalladi.github.io/exercises/tables.html"> Back to Tables </a>
+<br> 
+<br>
+ <a href= "https://anikamalladi.github.io/exercises/blocks.html"> Blocks </a>
+
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
