--- a/exercises/blocks.html
+++ b/exercises/blocks.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:2px solid DodgerBlue;">Blocks</h1>
+ 
+<h2 style="border:2px solid Violet;">Exercise 1</h2>
+<div>Hello</div>
+<div>World</div>
+
+<h2 style="border:2px solid Violet;">Exercise 2</h2>
+<span>Hello</span>
+<span>World</span>
+
+<h2 style="border:2px solid Violet;">Exercise 3</h2>
+<div style="background-color:black;color:white;padding:20px;">
+  <h2>London</h2>
+  <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+</div>
+
+<h2 style="border:2px solid Violet;">Exercise 4</h2>
+<h1>My <span style="color:red">Important</span> Heading</h1>
+
+
+<br> 
+<br>
+ <a href= "https://anikamalladi.github.io/exercises/lists.html"> Back to Lists Blocks </a>
+
+
+</body>
+</html>
+
+
+
+
 
