--- a/exercises/index.html
+++ b/exercises/index.html
@@ -17,6 +17,16 @@
  <a href= "https://anikamalladi.github.io/exercises/quotations.html"> Link to Quotations </a>
 <h2 style="border:2px solid Violet;">Comments</h2>
  <a href= "https://anikamalladi.github.io/exercises/comments.html"> Link to Comments </a>
- 
+<h2 style="border:2px solid Violet;">Links</h2>
+ <a href= "https://anikamalladi.github.io/exercises/links.html"> Link to Links </a>
+<h2 style="border:2px solid Violet;">Images</h2>
+ <a href= "https://anikamalladi.github.io/exercises/images.html"> Link to Images </a>
+<h2 style="border:2px solid Violet;">Tables</h2>
+ <a href= "https://anikamalladi.github.io/exercises/tables.html"> Link to Tables </a>
+<h2 style="border:2px solid Violet;">Lists</h2>
+ <a href= "https://anikamalladi.github.io/exercises/lists.html"> Link to Lists </a>
+<h2 style="border:2px solid Violet;">Blocks</h2>
+ <a href= "https://anikamalladi.github.io/exercises/blocks.html"> Link to Blocks </a>
+
 </body>
 </html>
