--- a/halloween.html
+++ b/halloween.html
@@ -1,1 +1,60 @@
+<!DOCTYPE html>
+<html>
+<body>
+<h1 style="border:6px solid Orange;">Halloween!</h1>
+
+<h2 style="border:4px solid Purple;">Table of Candies!</h2>
+<head>
+<style>
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 5px;
+    text-align: left;
+}
+</style>
+</head>
+<body>
+
+<table style="width:100%">
+  <tr>
+    <th>Candy Name</th>
+    <th>Number of Calories</th>
+    <th>Healthy?</th>
+  </tr>
+  <tr>
+    <td>Skittles</td>
+    <td>60 calories</td>
+    <td>No</td>
+  </tr>
+  <tr>
+    <td>Sour Patch</td>
+    <td>150 Calories</td>
+    <td>No</td>
+  </tr>
+</table>
+
+<h2 style="border:4px solid Black;">Candy List</h2>
+<ol>
+  <li>Skittles</li>
+  <li>Sour Patch Kids</li>
+  <li>MnM's</li>
+  <li>Starbursts</li>
+  <li>Candy Corn!</li>
+  <li>Reese's Pieces</li>
+</ol>
+
+<h2 style="border:4px solid Orange;">What is Halloween?</h2>
+<p title="About W3Schools">Halloween or Hallowe'en, also known as Allhalloween, All Hallows' Eve, or All Saints' Eve, is a celebration observed in a number of countries on 31 October, the eve of the Western Christian feast of All Hallows' Day.</p>
+
+<h2 style="border:4px solid Purple;">What other countries celebrate  Halloween?</h2>
+<p title="About W3Schools">Halloween or Hallowe'en, also known as Allhalloween, All Hallows' Eve, or All Saints' Eve, is a celebration observed in a number of countries on 31 October, the eve of the Western Christian feast of All Hallows' Day.</p></p>
+
+</body>
+</html>
+
+
+
 
