--- a/project/index.html
+++ b/project/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
-<h1 style="border:2px solid White;">Types of Fast Food Places</h1><body>
-<body style="background-color:powderblue;">
+<h1 style="border:5px solid PowderBlue;">Types of Fast Food Places</h1>
+<h2 style="border:3px solid Violet;">By Anika Malladi</h2>
+<body>
+<body style="background-color:White;">
 
-<p>I love ECS, and i like food.</p>
- <a href= "http://w3schools.com/" > w3 schools </a>
- <!-- haha im bored -->
+<p>This is my Website Project on "Types of Fast Food Places", which will inform you on the history of fast food restaurants and how it all started, to what is the future for the industry.</p>
+
+<img src="hamburger-and-fries.jpg">
+
+ 
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/project/definition.html"> What is Fast Food?
+<br>
+<br>
+<a href= "https://anikamalladi.github.io/project/history.html"> The Beginning of Fast Food </a>
+
 </body>
 </html>
-
