--- a/project/history.html
+++ b/project/history.html
@@ -1,1 +1,7 @@
+<!DOCTYPE html>
+<html>
+<h1 style="border:5px solid PowderBlue;">The Beginning of Fast Food</h1>
+<body>
+<body style="background-color:White;">
 
+<p>Fast Food Restaurants have been around for a very long time, but the original Fast Food restaurant was founded by the company "White Castle" in 1921, and the second was founded by "A & W" in 1923.But some may say that "McDonald's", which opened in 1940 was the very first successful fast food business which still exists today..</p>
