--- a/html-reference.html
+++ b/html-reference.html
@@ -7,6 +7,7 @@
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <h1>HTML Reference Page</h1>
     <h1>HTML</h1>
     <h3>In order to begin an html document, a "&lt;html&gt;" is used as the opening and closing tags, which signify the beginning and end of a html code. 
       <br>
