--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
  <a href= "https://anikamalladi.github.io/exercises/index.html"> Exercises </a>
 <h2 style="border:2px solid Violet;">Website Project</h2>
  <a href= "https://anikamalladi.github.io/project/main.html"> Types of Fast Food  </a>
+<h2 style="border:2px solid Violet;">HTML Reference Page</h2>
+ <a href= "https://anikamalladi.github.io/html-reference.html"> Reference Page  </a>
+<h2 style="border:2px solid Violet;">Extra Credit Halloween Page</h2>
+ <a href= "https://anikamalladi.github.io/html-reference.html"> Halloween Themed WebPage </a>
+<h2 style="border:2px solid Violet;">CSS Exercises</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/index.html"> CSS Exercises </a>
  
 </body>
 </html>
-
+ 
 
  
+
