--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
-    <link href="styles.css" rel="stylesheet" type="text/css" />
-  </head>
-  <body>
-    <h1>CSS Example</h1>
-    <p>My CSS Example</p>
-  </body>
+<h1 style="border:2px solid DodgerBlue;">CSS Exercises</h1>
+<body>
+<body style="background-color:White;">
+<h2 style="border:2px solid Violet;"> HTML Code</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/selectorsandvisualrules.html"> HTML </a>
+<h2 style="border:2px solid Violet;">CSS Code</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/selectorsandvisualrules.css"> CSS  </a>
+
+ 
+</body>
 </html>
+ 
