--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -3,12 +3,17 @@
 <h1 style="border:2px solid DodgerBlue;">CSS Exercises</h1>
 <body>
 <body style="background-color:White;">
-<h2 style="border:2px solid Violet;"> HTML Code</h2>
- <a href= "https://anikamalladi.github.io/css-exercises/selectorsandvisualrules.html"> HTML </a>
-<h2 style="border:2px solid Violet;">CSS Code</h2>
- <a href= "https://anikamalladi.github.io/css-exercises/selectorsandvisualrules.css"> CSS  </a>
+<h2 style="border:2px solid Violet;"> Setups and Selectors HTML</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/setupandselectors.html"> Exercise 1 HTML </a>
+<h2 style="border:2px solid Violet;">Setups and Selectors CSS</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/setupandselectors.css"> Exercise 1 CSS  </a>
+<h2 style="border:2px solid Violet;"> Visual Rules HTML</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/visualrules.html"> Exercise 2 HTML </a>
+<h2 style="border:2px solid Violet;">Visual Rules  CSS</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/visualrules.css"> Exercise 2 CSS  </a>
 
  
 </body>
 </html>
  
+
