--- a/project/index.html
+++ b/project/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
-<html>
-<h1 style="border:5px solid PowderBlue;">Types of Fast Food Places</h1>
-<h2 style="border:3px solid Violet;">By Anika Malladi</h2>
+<html lang="en">
+<head>
+<title>CSS Website Layout</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="layoutc3.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
 <body>
-<body style="background-color:White;">
 
-<p>This is my Website Project on "Types of Fast Food Places", which will inform you on the history of fast food restaurants and how it all started, to what is the future for the industry.</p>
+<div class="header">
+  <h1 class="fstyle">Types of Fast Food</h1>
+  <p class="subfstyle"> By Anika Malladi</p>
+</div>
 
-<img src="hamburger-and-fries.jpg">
+<div class="topnav">
+  <a class="active" href="index.html">Home</a>
+  <a href="page1.html">What is Fast Food?</a>
+  <a href="page2.html">History</a>
+  <a href="page3.html">Types of Fast Food</a>
+  <a href="page4.html">Future of Fast Food</a>
+</div>
 
- 
-<br>
-<br>
-<a href= "https://anikamalladi.github.io/project/definition.html"> What is Fast Food?
-<br>
-<br>
-<a href= "https://anikamalladi.github.io/project/history.html"> The Beginning of Fast Food </a>
+<div class="row content">
+  <div class="column side">
+    <h2 class="titlefstyle">Pictures </h2>
+    <img src="https://goo.gl/1EGWh8" width="220" height="220">
+    <p class="textfstyle">Thi is a picture of a hamburger, fries, and a drink.</p>
+  </div>
+  <div class="column middle">
+    <h2 class="titlefstyle">Website Project</h2>
+    <p class="textfstyle">This is my website project on "Types of Fast Food".</p>
+    <p class="textfstyle">This website has multiple subpages including "What is Fast Food", "History" and "Types of Fast Food". Each subpage has it's own HTML page and a shared CSS page.</p>
+  </div>
+  <div class="column side">
+    <h2 class="titlefstyle">Pictures</h2>
+    <img src="https://goo.gl/FyXdw4" width="200" height="200">
+    <p class="textfstyle">Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
+  </div>
+</div>
 
 </body>
 </html>
