--- a/project/page2.html
+++ b/project/page2.html
@@ -1,1 +1,47 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>CSS Website Layout</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="layoutc3.css">
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+
+<div class="header">
+  <h1 class="fstyle"> History of Fast Food</h1>
+</div>
+
+<div class="topnav">
+  <a href="index.html">Home</a>
+  <a href="page1.html">What is Fast Food?</a>
+  <a class="active"href="page2.html">History</a>
+  <a href="page3.html">Types of Fast Food</a>
+  <a href="page4.html">Future of Fast Food</a>
+</div>
+
+<div class="row content">
+  <div class="column side">
+    <h2 class="titlefstyle">More Pictures</h2>
+    <img src="https://goo.gl/haUQmm" width="200" height="200">
+    <p>In the image above, it shows one of the first fast-food restaurants in the US.</p>
+  </div>
+  <div class="column middle">
+    <h2 class="titlefstyle">History</h2>
+    <p>The very first fast-food chain was White Castle, and was founded in 1921 in Wichita, Kansas. White Castle's founders decided to change the public's view on hamburgers. They built their restaurants so that customers could see the food being prepared. They painted the buildings white and even chose a name that suggested cleanliness. White Castle was most popular in the American East and Midwest, but its success helped give hamburger meat a better reputation nationwide. </p>
+    <p>The McDonald brothers opened their redesigned restaurant in 1948, and several fast-food chains that exist today opened soon after. Burger King and Taco Bell got their start in the 1950s, and Wendy's opened in 1969. Some chains, like Carl's Jr., KFC and Jack in the Box, existed before the Speedee Service System, but modified their cooking techniques after its debut. McDonald's, which started it all, is now the world's largest fast-food chain.</p>
+    <a class="textfstyle" href="https://science.howstuffworks.com/innovation/edible-innovations/fast-food3.htm">How Fast Food Started Web Page</a>
+  </div>
+  <div class="column side">
+    <h2 class="titlefstyle">More Pictures</h2>
+    <img src="https://goo.gl/bCdvvd" width="200" height="200">
+    <p>In the image above, there is another picture of the first White Castle restaurant. </p>
+  </div>
+</div>
+
+
+  
+</body>
+</html>
