--- a/project/page3.html
+++ b/project/page3.html
@@ -41,6 +41,25 @@
       <li>Onion Rings</li>
       <li>Cheeseburger</li>
     </ul>  
+    
+  <table style="width:100%">
+  <tr>
+    <th>Food</th>
+    <th>Calories</th> 
+  </tr>
+  <tr>
+    <td>Hamburger</td>
+    <td>354</td>
+  </tr>
+  <tr>
+    <td>Onion Rings</td>
+    <td>480</td>
+  </tr>
+  <tr>
+    <td>French Fries</td>
+    <td>365</td>
+  </tr>
+  </table>
     <a class="textfstyle" href="http://www.historyoffastfood.com/fast-food-types/different-types-of-fast-food/">Types of Fast Food Web Page</a>
   </div>
   <div class="column side">
