--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -11,6 +11,10 @@
  <a href= "https://anikamalladi.github.io/css-exercises/visualrules.html"> Exercise 2 HTML </a>
 <h2 style="border:2px solid Violet;">Visual Rules  CSS</h2>
  <a href= "https://anikamalladi.github.io/css-exercises/visualrules.css"> Exercise 2 CSS  </a>
+<h2 style="border:2px solid Violet;"> Box Model HTML</h2>
+ <a href= "anikamalladi.github.io/css-exercises/theboxmodel.html"> Exercise 3 HTML  </a>
+<h2 style="border:2px solid Violet;"> Box Model CSS</h2>
+ <a href= "anikamalladi.github.io/css-exercises/theboxmodel.css"> Exercise 3 CSS  </a>
 
  
 </body>
