--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -12,9 +12,13 @@
 <h2 style="border:2px solid Violet;">Visual Rules  CSS</h2>
  <a href= "https://anikamalladi.github.io/css-exercises/visualrules.css"> Exercise 2 CSS  </a>
 <h2 style="border:2px solid Violet;"> Box Model HTML</h2>
- <a href= "anikamalladi.github.io/css-exercises/theboxmodel.html"> Exercise 3 HTML  </a>
+ <a href= "https://anikamalladi.github.io/css-exercises/theboxmodel.html"> Exercise 3 HTML  </a>
 <h2 style="border:2px solid Violet;"> Box Model CSS</h2>
- <a href= "anikamalladi.github.io/css-exercises/theboxmodel.css"> Exercise 3 CSS  </a>
+ <a href= "https://anikamalladi.github.io/css-exercises/theboxmodel.css"> Exercise 3 CSS  </a>
+<h2 style="border:2px solid Violet;">Changing The Box Model HTML</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/changingtheboxmodel.html"> Exercise 4 HTML  </a>
+<h2 style="border:2px solid Violet;">Changing The Box Model CSS</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/changingtheboxmodel.css"> Exercise 4 CSS  </a>
 
  
 </body>
