--- a/css-exercises/index.html
+++ b/css-exercises/index.html
@@ -19,6 +19,10 @@
  <a href= "https://anikamalladi.github.io/css-exercises/changingtheboxmodel.html"> Exercise 4 HTML  </a>
 <h2 style="border:2px solid Violet;">Changing The Box Model CSS</h2>
  <a href= "https://anikamalladi.github.io/css-exercises/changingtheboxmodel.css"> Exercise 4 CSS  </a>
+ <h2 style="border:2px solid Violet;">Display and Positioning HTML</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/displayandpositioning.html"> Exercise 5 HTML  </a>
+<h2 style="border:2px solid Violet;">Display and Positioning CSS</h2>
+ <a href= "https://anikamalladi.github.io/css-exercises/displayandpositioning.css"> Exercise 5 CSS  </a>
 
  
 </body>
