--- a/html-reference.html
+++ b/html-reference.html
@@ -12,6 +12,80 @@
    
 <html>
 <style>
+.mybstyle{ 
+  border: 4px solid Violet;
+  
+}
+
+.fstyle {
+  font: bold 35px "Trebuchet MS" ;
+  text-align: center;
+}
+
+.fontstyle { 
+  font: 12px "Courier New"; 
+}
+
+.borderleftstyle {
+  
+    border-left: 6px solid lightblue;
+    background-color: white;
+    
+}
+
+
+.mybgstyle { 
+  background-color: lightblue; 
+  font: bold 30px "Trebuchet MS"
+  
+}
+
+.tablestyle {
+  border-collapse: collapse;
+  width: 100%;
+  padding: 8px;
+  font: 15px "Trebuchet MS"
+
+} 
+
+.tablestyle th {
+  background-color: yellow;
+  font: bold 15px "Trebuchet MS"
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.moretablestyle tr{
+  padding-top: 15px;
+  padding-bottom: 15 px;
+}
+
+#customers {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#customers td, #customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #baeeef;
+    color: black;
+}
+
+.
+ 
+
 table, th, td {
     border: 1px solid black;
 }
