--- a/project/index.html
+++ b/project/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
 
+<!--This is my title and by line of the top of the home page-->
 <div class="header">
   <h1 class="fstyle">Types of Fast Food</h1>
   <p class="subfstyle"> By Anika Malladi</p>
 </div>
 
+<!--This is my titles of the sub pages on my navigation bar.-->
 <div class="topnav">
   <a class="active" href="index.html">Home</a>
   <a href="page1.html">What is Fast Food?</a>
@@ -22,20 +24,24 @@
   <a href="page4.html">Future of Fast Food</a>
 </div>
 
+<!--This is how I'm dividing each sub page into three columns.-->
 <div class="row content">
   <div class="column side">
+    <!--Pictures Column.-->
     <h2 class="titlefstyle">Pictures </h2>
-    <img src="https://goo.gl/1EGWh8" width="220" height="220">
+    <img src="https://goo.gl/1EGWh8" width="190" height="220" border="1">
     <p class="textfstyle">Thi is a picture of a hamburger, fries, and a drink.</p>
   </div>
   <div class="column middle">
+    <!--Content Column.-->
     <h2 class="titlefstyle">Website Project</h2>
     <p class="textfstyle">This is my website project on "Types of Fast Food".</p>
     <p class="textfstyle">This website has multiple subpages including "What is Fast Food", "History" and "Types of Fast Food". Each subpage has it's own HTML page and a shared CSS page.</p>
   </div>
   <div class="column side">
+    <!--Another Pictures Column.-->
     <h2 class="titlefstyle">Pictures</h2>
-    <img src="https://goo.gl/FyXdw4" width="200" height="200">
+    <img src="https://goo.gl/FyXdw4" width="200" height="200" border="3">
     <p class="textfstyle">Lorem ipsum dolor sit amet, consectetur adipiscing elit..</p>
   </div>
 </div>
