--- a/project/page1.html
+++ b/project/page1.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 
+<!--These lines of code are my Header for this sub page.-->
 <div class="header">
   <h1 class="fstyle"> What is Fast Food?</h1>
 </div>
 
+<!--These are all the titles of the sub pages in the nav bar.-->
 <div class="topnav">
   <a href="index.html">Home</a>
   <a class="active" href="page1.html">What is Fast Food?</a>
@@ -23,19 +25,22 @@
 
 <div class="row content">
   <div class="column side">
+    <!--Pictures Column.-->
     <h2 class="titlefstyle">More Pictures</h2>
-    <img src="https://goo.gl/AfauFX" width="200" height="200">
+    <img src="https://goo.gl/AfauFX" width="200" height="200" border="1">
     <p>In the image above, there is a definition of fast food.</p>
   </div>
   <div class="column middle">
+    <!--Content Column.-->
     <h2 class="titlefstyle">Definition</h2>
     <p>Fast food is  mass produced food that is prepared and served very quickly. The food is typically less healthy compared to other foods and meals. While any meal with low preparation time can be considered fast food, typically the term refers to food sold in a restaurant that is premade, and served to the customer in a packaged form.</p>
     <p>Fast food restaurants are traditionally differentiated by their ability to serve food using a drive-through. Outlets may be stands or kiosks, which may provide no tables, or fast food restaurants.Restaurant chains may have standardized food shipped to each restaurant from central locations.</p>
     <a class="textfstyle" href="https://en.wikipedia.org/wiki/Fast_food">Fast Food Reference Page</a>
   </div>
   <div class="column side">
+    <!--More Pictures Column.-->
     <h2 class="titlefstyle">More Pictures</h2>
-    <img src="https://goo.gl/nc16bU" width="200" height="200">
+    <img src="https://goo.gl/nc16bU" width="200" height="200" border="3">
     <p>In the image above, there is another picture informing about the Fast Food Industry.</p>
   </div>
 </div>
