--- a/project/page2.html
+++ b/project/page2.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,10 +9,12 @@
 </head>
 <body>
 
+<!--These lines of code are my Header for this sub page.-->
 <div class="header">
   <h1 class="fstyle"> History of Fast Food</h1>
 </div>
 
+<!--These are all the titles of the sub pages in the nav bar.-->
 <div class="topnav">
   <a href="index.html">Home</a>
   <a href="page1.html">What is Fast Food?</a>
@@ -24,19 +25,22 @@
 
 <div class="row content">
   <div class="column side">
+    <!--Pictures Column.-->
     <h2 class="titlefstyle">More Pictures</h2>
-    <img src="https://goo.gl/haUQmm" width="200" height="200">
+    <img src="https://goo.gl/haUQmm" width="200" height="200" border="2">
     <p>In the image above, it shows one of the first fast-food restaurants in the US.</p>
   </div>
   <div class="column middle">
+    <!--Content Column.-->
     <h2 class="titlefstyle">History</h2>
     <p>The very first fast-food chain was White Castle, and was founded in 1921 in Wichita, Kansas. White Castle's founders decided to change the public's view on hamburgers. They built their restaurants so that customers could see the food being prepared. They painted the buildings white and even chose a name that suggested cleanliness. White Castle was most popular in the American East and Midwest, but its success helped give hamburger meat a better reputation nationwide. </p>
     <p>The McDonald brothers opened their redesigned restaurant in 1948, and several fast-food chains that exist today opened soon after. Burger King and Taco Bell got their start in the 1950s, and Wendy's opened in 1969. Some chains, like Carl's Jr., KFC and Jack in the Box, existed before the Speedee Service System, but modified their cooking techniques after its debut. McDonald's, which started it all, is now the world's largest fast-food chain.</p>
     <a class="textfstyle" href="https://science.howstuffworks.com/innovation/edible-innovations/fast-food3.htm">How Fast Food Started Web Page</a>
   </div>
   <div class="column side">
+    <!--Pictures Column.-->
     <h2 class="titlefstyle">More Pictures</h2>
-    <img src="https://goo.gl/bCdvvd" width="200" height="200">
+    <img src="https://goo.gl/bCdvvd" width="200" height="200" border="3" >
     <p>In the image above, there is another picture of the first White Castle restaurant. </p>
   </div>
 </div>
