--- a/project/page3.html
+++ b/project/page3.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 
+<!--These lines of code are my Header for this sub page.-->
 <div class="header">
   <h1 class="fstyle"> Types of Fast Food</h1>
 </div>
 
+<!--These are all the titles of the sub pages in the nav bar.-->
 <div class="topnav">
   <a href="index.html">Home</a>
   <a href="page1.html">What is Fast Food?</a>
@@ -23,11 +25,13 @@
 
 <div class="row content">
   <div class="column side">
+    <!--Pictures Column.-->
     <h2 class="titlefstyle">More Pictures</h2>
-    <img src="https://goo.gl/AsVk78" width="200" height="200">
+    <img src="https://goo.gl/AsVk78" width="200" height="200"  border="2">
     <p>In the image above, it shows one of the biggest Mexican restaurants..</p>
   </div>
   <div class="column middle">
+    <!--Content Column.-->
     <h2 class="titlefstyle">Types of Food</h2>
     <p>There are many kinds of fast food. What will one place have in terms of fast food types, depends on what grows there, what of ingredients can be obtained and what local people like. Here are some types of fast food: </p>
     <ul class="textfstyle">
@@ -63,8 +67,9 @@
     <a class="textfstyle" href="http://www.historyoffastfood.com/fast-food-types/different-types-of-fast-food/">Types of Fast Food Web Page</a>
   </div>
   <div class="column side">
+    <!--More Pictures Column.-->
     <h2 class="titlefstyle">More Pictures</h2>
-    <img src="https://goo.gl/6WYBX1" width="200" height="200">
+    <img src="https://goo.gl/6WYBX1" width="200" height="200" border="3">
     <p>In the image above, there is a picture of one of the biggest fast-food chains. </p>
   </div>
 </div>
