--- a/project/page4.html
+++ b/project/page4.html
@@ -9,10 +9,12 @@
 </head>
 <body>
 
+<!--These lines of code are my Header for this sub page.-->
 <div class="header">
   <h1 class="fstyle"> Future of Fast Food</h1>
 </div>
 
+<!--These are all the titles of the sub pages in the nav bar.-->
 <div class="topnav">
   <a href="index.html">Home</a>
   <a href="page1.html">What is Fast Food?</a>
@@ -23,19 +25,22 @@
 
 <div class="row content">
   <div class="column side">
+    <!--Pictures Column.-->
     <h2 class="titlefstyle">More Pictures</h2>
-    <img src="https://goo.gl/1MySPj" width="200" height="200">
+    <img src="https://goo.gl/1MySPj" width="200" height="200" border="2">
     <p>In the image above, it shows what the future of fast food could look like.</p>
   </div>
   <div class="column middle">
+    <!--Content Column.-->
     <h2 class="titlefstyle">Future of Food</h2>
     <p>According to Rob Polacek,Chief Creative Officer and Partner of Puccini Group, the future of fast food will revolve around suburban food halls, acorrding to his own designs along with statistics.  </p>
     <p>Over 359 fast-food restaurants have closed all over the US due to the competition of other restaurants, which is showing how the fast-food industry is slowly going out of business. And with all the empty fast-food restaurants, Polacek plans on repurposing the buildings to be food halls, where customers can buy, sell, and eat local food. Each food hall will serve food according to it's location, and serves much healthier food than what is normally sold.</p>
     <a class="textfstyle" href="http://www.businessinsider.com/fast-food-suburbs-future-2017-6">The Future of Fast Food Web Page</a>
   </div>
   <div class="column side">
+    <!--More Pictures Column.-->
     <h2 class="titlefstyle">More Pictures</h2>
-    <img src="https://goo.gl/WWLWKf" width="200" height="200">
+    <img src="https://goo.gl/WWLWKf" width="200" height="200" border="3">
     <p>In the image above, there is another picture of what fast-food restaurants are starting to look like. </p>
   </div>
 </div>
