--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="icon" href="/images/favicon.png">
+</head>
 <h1 style="border:2px solid DodgerBlue;">My ECS Github Page</h1>
 <body>
 <body style="background-color:White;">
