--- a/static.html
+++ b/static.html
@@ -1,2 +1,2 @@
-<h1 style="border:2px solid DodgerBlue;">My ECS Github Page</h1>
+<h1 style="border:2px solid DodgerBlue;">Static Image Page</h1>
 <img src='/images/largeimage.jpg'>
