--- a/responsive.html
+++ b/responsive.html
@@ -1,6 +1,6 @@
 <h1 style="border:2px solid DodgerBlue;">Responsive Image Page</h1>
 <img src='/images/original.jpg'
-            srcset='/images/large.jpg 5700w,
-            /images/medium.jpg 3500w,
-            /images/small.jpg 2000w,
+            srcset='largeimage.jpg 5700w,
+            mediumimage.jpg 3500w,
+            smallimage.jpg 2000w,
         
